# theburgbot

./: .gitignore  .pylintrc  README.md  baby-tox.sh  pyproject.toml
30wmtg/: populate.py
templates/: gpt_response.html  redeem_success_frag.html  twmtg_card_frag.html  twmtg_card_meta_frag.html
tests/: db.py  test_db.py
theburgbot/: bot.py  client.py  commands.py  common.py  config.py  constants.py  db.py  httpapi.py  ical.py  invite_thread.py  main.py
theburgbot/cmd_handlers/: admin.py  events.py  feedback.py  gpt.py  igdb.py  new_invite.py  scry.py  user.py
theburgbot/schema/: 0000.sql  0001.sql  0002.sql  0003.sql  0004.sql  0005.sql  0006.sql
twentywordmtg/: populate.py  server.py
