[tool.poetry]
name = "theburgbot"
version = "0.1.0"
description = ""
authors = ["Ryan Joseph <ryan@electricsheep.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
